# flatplay

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: rust.yml
src/: build_dirs.rs  command.rs  flatpak_manager.rs  git_source.rs  instance_lock.rs  lib.rs  main.rs  manifest.rs  process.rs  state.rs  utils.rs
src/builder/: mod.rs
src/sandbox/: bwrap.rs  install.rs  mod.rs
src/sources/: cache.rs  mod.rs
