[package]
name = "flatplay"
version = "0.5.0"
authors = ["Mufeed Ali <me@mufeed.dev>"]
description = "Simple CLI tool to build and run Flatpak applications."
readme = "README.md"
license = "MIT"
edition = "2024"
homepage = "https://github.com/mufeedali/flatplay"
repository = "https://github.com/mufeedali/flatplay"
keywords = ["flatpak", "cli", "gnome"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.17"
dialoguer = "0.12.0"
colored = "3.1.1"
walkdir = "2.5.0"
clap_complete = "4.5.65"
regex = "1.12.3"
nix = { version = "0.31.1", features = ["process", "signal", "user"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "flatplay"
path = "src/main.rs"
