[package]
name = "flatplay"
version = "0.5.0"
authors = ["Mufeed Ali <me@mufeed.dev>"]
description = "Simple CLI tool to build and run Flatpak applications."
readme = "README.md"
license = "MIT"
edition = "2024"
homepage = "https://github.com/mufeedali/flatplay"
repository = "https://github.com/mufeedali/flatplay"
keywords = ["flatpak", "cli", "gnome"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = { version = "0.0.23", default-features = false, features = ["deserialize"] }
dialoguer = "0.12.0"
colored = "3.1.1"
console = "0.16"
ctrlc = "3"
walkdir = "2.5.0"
clap_complete = "4.6.0"
nix = { version = "0.31.2", features = ["fs", "process", "signal", "user"] }
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "flatplay"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
